# auto-labeling

./: .gitignore  README.md  main.py  pyproject.toml  train.py  visualize.py
